--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,64 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+/* Sandeep */
+
+.post-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin: 60px;
+  margin-top: 30px;
+}
+
+.post-button {
+  background-color: #007BFF;
+  color: #fff;
+  border-radius: 12px;
+  text-align: center;
+  padding: 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  transition: background-color 0.3s;
+}
+
+.post-button:hover {
+  background-color: #0056b3;
+}
+
+body{
+  background-color: #282c34;
+}
+.rep_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.report{
+  display: block;
+  justify-content: center;
+  border-style: groove;
+  border-color: rgb(8, 8, 8);
+}
+h1,h2{
+  color: #fff;
+}
+
+.home_container h2{
+  margin-left: 60px;
+
+}
+
+.header-container{
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: rgb(31, 20, 69);
+}
+.header-container h3{
+  margin-right:60px ;
+  color: white;
+}
