--- a/src/App.css
+++ b/src/App.css
@@ -92,8 +92,24 @@ h1,h2{
     display: flex;
     flex-direction: row-reverse;
     background-color: rgb(31, 20, 69);
+    justify-content: space-between;
 }
 .header-container h3{
   margin-right:60px ;
   color: white;
+}
+
+#back{
+background-color:rgba(128, 128, 128, 0) !important;
+border: none;
+color: #fff;
+font-size: 18px;
+display: flex;
+align-items: center;
+
+}
+
+#backimg{
+  width: 6%;
+  padding-left: 5%;
 }
